--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
+    "nodemailer": "^6.4.14",
     "nodemon": "^2.0.5",
     "validator": "^13.1.17"
   }
